# nn

./: .gitignore  .pylintrc  .ruff.toml  Makefile  README.md  atis_yvchen.py  dataset.py  decoding_utils.py  embedding_utils.py  fmt_or_lint.sh  glove_utils.py  intent_prediction.py  intent_prediction_test.py  linear_regression.py  load_atis_mesnilgr.py  load_atis_yvchen.py  params.py  params_test.py  plotting.py  prune_glove.py  pyproject.toml  requirements.in  requirements.txt  text_classification.py  vocab.py
data/: atis.py  dataset.py  dataset_gen.py  prune_glove.py  vocab.py
data/atis/: get.sh  get_yvchen.sh
data/glove/: get.sh
evaluation/: hellaswag.py
modeling/: device_util.py  embedding_util.py  linear_regression.py  linear_regression_test.py
modeling/gpt2/: data_loader.py  equivalence_test.py  eval.py  eval_test.py  model.py  model_jax.py  model_torch.py  train.py  train_test.py  train_torch.py  train_torch_test.py
resources/: get_atis.sh  get_fineweb.py  get_glove.sh  get_hellaswag.sh  get_topv2.sh
testing/: test_util.py
util/: plotting.py  rattr.py  rattr_test.py
