[project]
name = "nn"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.1",
    "datasets>=4.0.0",
    "flax>=0.11.2",
    "jax>=0.7.1",
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optax>=0.2.5",
    "tensorflow>=2.20.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "notebook>=7.4.5",
    "scm-kit>=0.0.4",
]
